Added new artifact

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -182,6 +182,8 @@
     "grimoireDescr": "Invoquer l'élémentaire **météo**",
     "book": "Livre interdit",
     "bookDescr": "Augmente **l'attaque** après l'évano. l'adversaire",
+    "apple": "Pomme empoisonnée",
+    "appleDescr": "**Donner cet artefact** aux attaquants",
     
     "information": "Information",
     "informationDescr": "Recevoir des informations sur le combat",
@@ -237,7 +239,7 @@
     "fightBegin": "Que le combat commence!",
     "usedSpell": "{0} a utilisé **{1}**.",
     "hit": "C'est un coup.",
-    "criticalHit": "C'est un coup critique!",
+    "criticalHit": "C'est un coup **critique**!",
     "nameFainted": "{0} s'est évanouie.",
     "nameRetreated": "{0} s'est retirée.",
     "nameProtected": "{0} s'est protégée.",
@@ -253,24 +255,24 @@
     "agilityDrop": "**Agilité** de {0} a diminué.",
     "precisionDrop": "**Précision** de {0} a diminué.",
     "resistanceDrop": "**Résistance** de {0} a diminué.",
-    "poisoned": "{0} s'est empoisonnée.",
-    "healed": "{0} s'est guérie.",
-    "confused": "{0} s'est confondue.",
-    "bombed": "{0} s'est bombardée.",
-    "blessed": "{0} s'est bénie.",
-    "cursed": "{0} devenue maudite.",
-    "chained": "{0} s'est enchaînée.",
-    "invigorated": "{0} s'est revigorée.",
-    "exhausted": "{0} s'est épuisée.",
-    "restricted": "{0} s'est restreinte.",
-    "doomed": "{0} s'est condamnée.",
-    "taunted": "{0} a été raillée.",
+    "poisoned": "{0} s'est **empoisonnée**.",
+    "healed": "{0} s'est **guérie**.",
+    "confused": "{0} s'est **confondue**.",
+    "bombed": "{0} s'est **bombardée**.",
+    "blessed": "{0} s'est **bénie**.",
+    "cursed": "{0} devenue **maudite**.",
+    "chained": "{0} s'est **enchaînée**.",
+    "invigorated": "{0} s'est **revigorée**.",
+    "exhausted": "{0} s'est **épuisé**e.",
+    "restricted": "{0} s'est **restreinte**.",
+    "doomed": "{0} s'est **condamnée**.",
+    "taunted": "{0} a été **raillée**.",
     "weatherChanged": "Le temps a changé en {0}.",
     "weatherFailed": "Le temps n'a pas changé.",
     "swapWith": "{0} a été échangé avec {1}.",
     "swapFailed": "{0} n'a pas pu être échangée.",
     "spellFailed": "Ça a échoué!",
-    "spellProtected": "{0} était protégée par son bouclier.",
+    "spellProtected": "{0} était protégée par son **bouclier**.",
     "lostHP": "{0} a perdue HP.",
     "gainedHP": "{0} a gagnée HP.",
     "healFailed": "La guérison a échoué.",
@@ -281,8 +283,9 @@
     "swappedHexes": "Les sortilèges ont été échangés.",
     "nameProvoked": "{0} a été provoquée.",
     "swappedArtifacts": "Les artefacts ont été échangés.",
-    "nameTargeted": "{0} est devenue le centre d'attention.",
-    "equippedArtifact": "{0} a équipé avec {1}.",
+    "nameTargeted": "{0} est devenue le centre **d'attention**.",
+    "usedArtifact": "{0} a utilisé **{1}**.",
+    "receivedArtifact": "{0} a reçu **{1}**.",
     
     "superEffective": "Super efficace",
     "veryEffective": "Très efficace",
