Fixed french translation

--- a/Elementary/Data/Languages/fr.json
+++ b/Elementary/Data/Languages/fr.json
@@ -277,8 +277,8 @@
     "swapFailed": "{0} n'a pas pu être échangée.",
     "spellFailed": "Ça a échoué!",
     "spellProtected": "{0} était protégée par son **bouclier**.",
-    "lostHP": "{0} a perdue HP.",
-    "gainedHP": "{0} a gagnée HP.",
+    "lostHP": "{0} a perdue PV.",
+    "gainedHP": "{0} a gagnée PV.",
     "healFailed": "La guérison a échoué.",
     "namePerished": "{0} a périe.",
     "elementChanged": "L'élément de {0} est maintenant {1}.",
